--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,5 @@
   "name": "Srcbook Development",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20",
   "postCreateCommand": "npm install -g srcbook",
-  "postStartCommand": "srcbook start"
+  "postAttachCommand": "srcbook start"
 }
