--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,9 @@
   "name": "Srcbook Development",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20",
   "postCreateCommand": "npm install -g srcbook",
-  "postAttachCommand": "srcbook start",
-  "forwardPorts": [2150]
+  "postAttachCommand": "npx srcbook@latest start",
+  "forwardPorts": [2150],
+  "mounts": [
+    "source=srcbook-output,target=/workspace/docs,type=bind"  // Bind mount docs directory to local machine
+  ]
 }
