--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,6 @@
   "name": "Srcbook Development",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20",
   "postCreateCommand": "npm install -g srcbook",
-  "postAttachCommand": "srcbook start",
+  "postAttachCommand": "npx srcbook@latest start",
   "forwardPorts": [2150]
 }
