--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,15 @@
 {
   "name": "Srcbook Development",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20",
-  "postCreateCommand": "npm install -g srcbook",
-  "postAttachCommand": "npx srcbook@latest start",
-  "forwardPorts": [2150]
+  "postCreateCommand": "npm init -y && npm install srcbook typescript @types/node",
+  "postAttachCommand": "npx srcbook start",
+  "forwardPorts": [2150],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode"
+      ]
+    }
+  }
 }
